force-app/main/default/objects/RTL_Fulfillment_Type_Mapping__mdt/RTL_Fulfillment_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Fulfillment Type Mapping</label>
    <pluralLabel>Fulfillment Type Mappings</pluralLabel>
</CustomObject>