force-app/main/default/objects/RTL_Fulfillment_Type_Mapping__mdt/fields/RTL_Description__c.field-meta.xml
<CustomField>
    <fullName>RTL_Description__c</fullName>
    <label>Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>