force-app/main/default/objects/RTL_Fulfillment_Type_Mapping__mdt/fields/RTL_Fulfillment_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Fulfillment_Type_Code__c</fullName>
    <label>Fulfillment Status Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>