force-app/main/default/objects/RTL_Fulfillment_Type_Mapping__mdt/fields/RTL_Fulfillment_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Fulfillment_Type_Name__c</fullName>
    <label>Fulfillment Type Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
                <default>true</default>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Cash back to Credit card</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>WOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>