force-app/main/default/objects/RTL_Fulfillment_Type_Mapping__mdt/fields/RTL_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Status_Code__c</fullName>
    <label>Status Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>