force-app/main/default/objects/RTL_Fulfillment_Type_Mapping__mdt/fields/RTL_Success_Status__c.field-meta.xml
<CustomField>
    <fullName>RTL_Success_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Success Status</label>
    <type>Checkbox</type>
</CustomField>